DroidFish: Use a seekbar preference setting to give finer control over book randomization.

--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -255,13 +255,11 @@
                 android:summary="Ignore moves marked as not for tournament play"
                 android:defaultValue="false">
             </CheckBoxPreference>
-            <ListPreference
-                android:key="bookRandomization"
-                android:title="Book Randomization"
-                android:entryValues="@array/book_randomization_values"
-                android:entries="@array/book_randomization_texts"
-                android:defaultValue="1">
-            </ListPreference>
+            <org.petero.droidfish.SeekBarPreference
+                android:key="bookRandom"
+                android:defaultValue="500"
+                android:title="Book Randomization">
+            </org.petero.droidfish.SeekBarPreference>
     		<EditTextPreference
                 android:key="bookFile"
                 android:title="Book Filename"
