--- a/DroidFish/res/layout/select_percentage.xml
+++ b/DroidFish/res/layout/select_percentage.xml
@@ -12,10 +12,10 @@
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
 			android:layout_weight="1"
-			android:text="Strength (%)">
+			android:text="Value (%)">
 		</TextView>
 		<EditText
-			android:id="@+id/selstrength_number"
+			android:id="@+id/selpercentage_number"
 			android:background="@android:drawable/editbox_background"
 			android:layout_width="100dip"
 			android:layout_height="wrap_content"
@@ -27,14 +27,14 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
 		<Button
-			android:id="@+id/selstrength_cancel"
+			android:id="@+id/selpercentage_cancel"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:text="Cancel">
 		</Button>
 		<Button
-			android:id="@+id/selstrength_ok"
+			android:id="@+id/selpercentage_ok"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
