--- a/DroidFish/res/layout-land/main.xml
+++ b/DroidFish/res/layout-land/main.xml
@@ -44,25 +44,37 @@
 	    android:includeFontPadding="true"
 	    android:typeface="monospace"
 	    android:textSize="10dip"/>
-	<ScrollView
-		android:id="@+id/scrollView"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_weight="1">
-		<TextView
-		    android:id="@+id/moveList"
-		    android:layout_width="fill_parent" 
-		    android:layout_height="wrap_content" 
-		    android:includeFontPadding="true"
-		    android:typeface="monospace"
-		    android:textSize="10dip"/>
-   	</ScrollView>
-	<TextView
-	    android:id="@+id/thinking"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content" 
-	    android:includeFontPadding="true"
-	    android:typeface="monospace"
-	    android:textSize="10dip"/>
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <view
+            class="org.petero.droidfish.MyScrollView"
+            android:id="@+id/scrollViewBot"
+            android:layout_alignParentBottom="true"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/thinking"
+                android:layout_width="fill_parent" 
+                android:layout_height="wrap_content" 
+                android:includeFontPadding="true"
+                android:typeface="monospace"
+                android:textSize="10dip"/>
+        </view>
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_above="@+id/scrollViewBot"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <TextView
+                android:id="@+id/moveList"
+                android:layout_width="fill_parent" 
+                android:layout_height="wrap_content" 
+                android:includeFontPadding="true"
+                android:typeface="monospace"
+                android:textSize="10dip"/>
+        </ScrollView>
+    </RelativeLayout>
 	</LinearLayout>
 </LinearLayout>
