DroidFish: Added preference setting for larger game navigation buttons.

--- a/DroidFish/res/xml/preferences.xml
+++ b/DroidFish/res/xml/preferences.xml
@@ -147,6 +147,12 @@
 			android:entries="@array/font_size_texts"
 			android:defaultValue="12">
 		</ListPreference>
+        <CheckBoxPreference
+            android:key="largeButtons"
+            android:title="Large Buttons"
+            android:summary="Use large buttons for game navigation and mode setting"
+            android:defaultValue="false">
+        </CheckBoxPreference>
 		<PreferenceScreen
 			android:key="colors"
 			android:title="Color Settings"
