--- a/DroidFish/res/layout/main.xml
+++ b/DroidFish/res/layout/main.xml
@@ -30,15 +30,13 @@
             android:id="@+id/undoButton"
             android:layout_width="36dp"
             android:layout_height="32dp"
-            android:longClickable="true"
-            android:src="@drawable/left_small">
+            android:src="@drawable/left">
         </ImageButton>
 		<ImageButton
             android:id="@+id/redoButton"
             android:layout_width="36dp"
             android:layout_height="32dp"
-            android:longClickable="true"
-            android:src="@drawable/right_small">
+            android:src="@drawable/right">
         </ImageButton>
 	</LinearLayout>
     <RelativeLayout
